# daemon-templates

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  bootstrap  configure.ac
include/: log.h  network.h
src/: Makefile.am  daemon.c  log.c  main.c  network.c  ping_pong.c
tests/: netpp.sh
